--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -21,5 +21,8 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: Install Jest globally
+        run: npm install -g jest
+
       - name: Run tests
-        run: npx jest
+        run: jest
